--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -36,9 +36,18 @@ header {
 .me {
     position: absolute;
     margin-top: 4rem;
-    /* overflow: hidden; */
+    overflow: hidden;
     left: 50%;
     transform: translateX(-50%);
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+}
+
+.me h5 {
+    font-size: 1.2rem;
+    color: var(--color-light);
+    margin: 3rem 0 2rem;
 }
 
 .me img {
@@ -58,14 +67,22 @@ header {
 /* ================== MQ (Medium Devices) ========== */
 @media screen and (max-width: 1024px) {
     header {
-        height: 68vh;
+        height: 120vh;
     }
+
+    .me {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+
 }
 
 /* ================== MQ (Small Devices) ========== */
 @media screen and (max-width: 600px) {
     header {
-        height: 100vh;
+        height: 120vh;
     }
 
     .header__socials,
