--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,92 +1,102 @@
 header {
-    height: 100vh;
-    padding-top: 7rem;
-    overflow: hidden;
+  height: 100vh;
+  padding-top: 7rem;
+  overflow: hidden;
 }
 
 .header__container {
-    text-align: center;
-    height: 100%;
-    position: relative;
+  text-align: center;
+  height: 100%;
+  position: relative;
+}
+
+.header__container h5 {
+    font-size: 1.3rem;
+}
+
+.header__container h1 {
+  font-size: 5rem;
+  font-weight: 600;
+  color: var(--color-primary);
 }
 
 /*==============CTA=============*/
 
 .cta {
-    margin-top: 2.5rem;
-    display: flex;
-    gap: 1.1rem;
-    justify-content: center;
+  margin-top: 2.5rem;
+  display: flex;
+  gap: 1.1rem;
+  justify-content: center;
 }
 
 /*============== SOCIALS HEADER =============*/
 
 .header__socials {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
-    font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.8rem;
+  position: absolute;
+  left: 0;
+  bottom: 3rem;
+  font-size: 1.5rem;
 }
 
 /*============== PICTURE HEADER =============*/
 .me {
-    position: absolute;
-    margin-top: 4rem;
-    overflow: hidden;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    flex-direction: row;
-    width: 80%;
+  position: absolute;
+  margin-top: 4rem;
+  overflow: hidden;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
+  width: 80%;
 }
 
 .me h5 {
-    font-size: 1.2rem;
-    color: var(--color-light);
-    margin: 3rem 0 2rem;
+  font-size: 1.3rem;
+  font-weight: 500;
+  color: var(--color-light);
+  margin: 3rem 0 2rem;
+  text-align: right;
 }
 
 .me img {
-    border-radius: 12rem 12rem;
-    height: 25rem;
-    width: 22rem;
+  border-radius: 12rem 12rem;
+  height: 25rem;
+  width: 22rem;
 }
 
 /*============== SCROLL DOWN =============*/
 .scroll__down {
-    position: absolute;
-    right: -2.3rem;
-    bottom: 5rem;
-    font-size: 1.5rem;
+  position: absolute;
+  right: -2.3rem;
+  bottom: 5rem;
+  font-size: 1.5rem;
 }
 
 /* ================== MQ (Medium Devices) ========== */
 @media screen and (max-width: 1024px) {
-    header {
-        height: 120vh;
-    }
+  header {
+    height: 120vh;
+  }
 
-    .me {
-        display: grid;
-        grid-template-columns: 1fr;
-        justify-items: center;
-    }
-
-
+  .me {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
 }
 
 /* ================== MQ (Small Devices) ========== */
 @media screen and (max-width: 600px) {
-    header {
-        height: 120vh;
-    }
+  header {
+    height: 120vh;
+  }
 
-    .header__socials,
-    .scroll__down {
-        display: none;
-    }
+  .header__socials,
+  .scroll__down {
+    display: none;
+  }
 }
