--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@
 }
 
 :root {
-    --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
+    --color-bg: #261E59;
+    --color-bg-variant: #534A8C;
+    --color-primary: #D9814E;
     --color-primary-variant: rgba(77, 181, 255, .4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, .6);
