--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@
 }
 
 :root {
-    --color-bg: #261E59;
-    --color-bg-variant: #534A8C;
+    --color-bg: #063970;
+    --color-bg-variant: #154c79;
     --color-primary: #D9814E;
     --color-primary-variant: rgba(77, 181, 255, .4);
     --color-white: #fff;
